--- a/src/AL.Interpolation/AL.Interpolation.API.csproj
+++ b/src/AL.Interpolation/AL.Interpolation.API.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -17,8 +17,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\AL.Interpolation.Domain\AL.Interpolation.Domain.csproj" />
-    <ProjectReference Include="..\..\..\AL.Interpolation.Entities\AL.Interpolation.Entities.csproj" />
+    <ProjectReference Include="..\AL.Interpolation.Domain\AL.Interpolation.Domain.csproj" />
+    <ProjectReference Include="..\AL.Interpolation.Entities\AL.Interpolation.Entities.csproj" />
   </ItemGroup>
 
 </Project>
