--- a/src/AL.Interpolation.Client/appsettings.json
+++ b/src/AL.Interpolation.Client/appsettings.json
@@ -5,5 +5,17 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Server": {
+    "Endpoint": {
+      "Url": "http://localhost:6090",
+      "Protocols": "Http1"
+    }
+  },
+  "Docker": {
+    "Endpoint": {
+      "Url": "http://host.docker.internal:6090",
+      "Protocols": "Http1"
+    }
+  }
 }
