--- a/src/AL.Interpolation.Client/appsettings.json
+++ b/src/AL.Interpolation.Client/appsettings.json
@@ -8,7 +8,7 @@
   "AllowedHosts": "*",
   "Server": {
     "Endpoint": {
-      "Url": "http://localhost:6090",
+      "Url": "http://localhost:6090",//6090
       "Protocols": "Http1"
     }
   },
